--- a/src/Homepage/Homepage.css
+++ b/src/Homepage/Homepage.css
@@ -2,15 +2,15 @@ body {
   color: #fff;
   font-family: "open-sans-bold", AvenirNext-Medium, sans-serif;
   font-size: 18px;
-  text-align: center;
 }
 
 #screen1 {
-  background: #43b29d;
+  background: black;
 }
 
 #screen1 p {
   padding-top: 200px;
+  font-size: 30px;
 }
 section {
   height: 100vh;
