--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -3,6 +3,13 @@
   padding: 0;
 }
 
+.nav-socials {
+  width: 50%;
+}
+.nav-main {
+  width: 50%;
+}
+
 /* This class is added on scroll */
 .fixed {
   position: fixed;
@@ -17,16 +24,16 @@ nav {
   bottom: 0;
   width: 100%;
   height: 70px;
-  background: #fff;
+  background: black;
 }
 
 nav li {
-  display: inline-block;
-  padding: 24px 10px;
+  display: inline;
+  padding: 5px 5px;
 }
 
 nav li a {
-  color: #757575;
+  color: white;
   text-transform: uppercase;
 }
 
