--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -3,18 +3,32 @@
   padding: 0;
 }
 
+.fbIcon:hover {
+  color: #3b5998;
+}
+.igIcon:hover {
+  color: #e1306c;
+}
+.ytIcon:hover {
+  color: #ff0000;
+}
+
 .nav-socials {
-  width: 50%;
+  width: 30%;
 }
 .nav-main {
-  width: 50%;
+  width: 40%;
+  text-align: center;
+}
+.nav-right {
+  width: 30%;
 }
 
 /* This class is added on scroll */
 .fixed {
   position: fixed;
   top: 0;
-  height: 70px;
+  height: 10%;
   z-index: 1;
 }
 
@@ -23,7 +37,7 @@ nav {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 70px;
+  height: 10%;
   background: black;
 }
 
