--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,8 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 .fbIcon:hover {
   color: #3b5998;
 }
@@ -22,6 +17,10 @@
 }
 .nav-right {
   width: 30%;
+}
+.navbar-container {
+  padding: 1.5em;
+  box-sizing: border-box;
 }
 
 /* This class is added on scroll */
@@ -43,7 +42,7 @@ nav {
 
 nav li {
   display: inline;
-  padding: 5px 5px;
+  padding: 0.5em;
 }
 
 nav li a {
