--- a/src/Homepage/Homepage.css
+++ b/src/Homepage/Homepage.css
@@ -16,7 +16,10 @@ section {
   height: 100vh;
 }
 #screen2 {
-  background: #efc94d;
+  background-image: linear-gradient(rgba(0,0,50,0.8), rgba(0,0,50,0.8)), url(background.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
 #screen3 {
