--- a/src/AboutPage/AboutPage.css
+++ b/src/AboutPage/AboutPage.css
@@ -8,16 +8,53 @@ body {
     text-align: center;
     padding: 50px 0; /* Adjust padding for spacing */
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
+    /* color: white; */
+    color: #ff69b4; /* Hot Pink */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background-image: linear-gradient(rgba(0,0,50,0.8), rgba(0,0,50,0.8)), url("media/retro-anime-1grctabx31sxl8oo.jpg");
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    transform: scale(0.4);
+    animation: scaleIn 1s ease-in-out forwards;
   }
 
+  @keyframes scaleIn {
+    from {
+      transform: scale(0.4);
+    }
+    to {
+      transform: scale(1);
+    }
+  }
+
+  .about-section1 {
+    font-size: 40px;
+    text-align: center;
+    padding: 50px 0; /* Adjust padding for spacing */
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: white;
+    background-image: linear-gradient(rgba(0,0,50,0.8), rgba(0,0,50,0.8)), url("media/background.jpg");
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    
+  }
+
+
+  .about-section2{
+    background-image: linear-gradient(rgba(0,0,50,0.8), rgba(0,0,50,0.8)), url("media/zoom-effect-background_23-2149729180.avif");
+    background-position: center;
+    background-size: cover;
+    position: relative;
+  }
   
   .l-container {
     text-align: center;
   }
   
   h1 {
-    margin-bottom: 20px; /* Adjust the margin-bottom to control the space between heading and images */
+    margin-bottom: 20px; /* Adjust the margin-bottom to control the space between heading and cards */
   }
   
   .b-game-cards-container {
@@ -29,19 +66,47 @@ body {
   
   .b-game-card {
     margin: 0 10px; /* Adjust the margin to control the space between the cards */
-    transition: transform 0.3s ease-in-out; /* Add a smooth transition effect */
+    perspective: 1000px; /* Set the perspective for the 3D effect */
   }
   
-  .b-game-card:hover {
-    transform: scale(1.1); /* Increase the size on hover */
+  .b-game-card__cover {
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+  }
+  
+  .b-game-card:hover .b-game-card__cover {
+    transform: rotateY(180deg); /* Flip the card on hover */
   }
   
   .b-game-card__cover img {
     max-width: 100%;
     height: auto;
     display: block;
-    max-height: 550px; /* Adjust the max-height to control the default size of the images */
+    max-height: 550px; /* Adjust the max-height to control the size of the images */
+    backface-visibility: hidden; /* Hide the back of the image during the flip */
+    border-radius: 50px; 
   }
+  
+  .b-game-card__back {
+    transform: rotateY(180deg); /* Initially hide the back of the card */
+    position: absolute;
+    font-size: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    backface-visibility: hidden; /* Hide the back during the flip */
+    background-color: #ee7a36; /* Back face color, adjust as needed */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #333; /* Text color on the back face */
+    border-radius: 50px;
+  }
+
+  
   
   
   
