--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -74,3 +74,46 @@ nav li a:hover {
     font-size: 0.875em;
   }
 }
+.mega-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.mega-menu.active {
+  display: block;
+}
+
+.mega-menu-container {
+  display: flex;
+  justify-content: center;
+  padding: 1em;
+}
+
+.mega-menu-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.mega-menu-list li {
+  margin: 0.5em;
+}
+
+.mega-menu-list a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1em;
+  transition: color 0.3s;
+}
+
+.mega-menu-list a:hover {
+  color: #b5f732;
+}
+
