--- a/src/Homepage/Homepage.css
+++ b/src/Homepage/Homepage.css
@@ -8,20 +8,20 @@ body {
   background: black;
 }
 
+
 #screen1 p {
   padding-top: 200px;
   font-size: 30px;
+  
 }
 section {
   height: 100vh;
 }
 #screen2 {
-  background-image: linear-gradient(rgba(0,0,50,0.8), rgba(0,0,50,0.8)), url(background.jpg);
-  background-position: center;
-  background-size: cover;
-  position: relative;
+  background: red
 }
 
 #screen3 {
   background: #e1793d;
+  
 }
